--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "config": "^3.3.3",
     "express": "^4.17.1",
     "express-validator": "^6.9.2",
+    "formik": "^2.2.6",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
